--- a/gema-main/assets/css/index.css
+++ b/gema-main/assets/css/index.css
@@ -38,13 +38,17 @@ align-items:center;
 
 .left-login > h1{
 
-color:rgb(13, 31, 31);
-font-size:2vw;
-margin-bottom:-10px;
+color:rgb(209, 238, 190);
+font-size:40px;
+margin-bottom:15px;
+font-family: 'Oswald', sans-serif;
+margin-left: 45px;
+margin-top: -40px;
 }
 
 .animação {
-    width: 30vw;
+    width: 20vw;
+    margin-left:55px;
 }
 
 .if {
@@ -68,7 +72,7 @@ height:4vh;
 
 .card-login {
 
-    width:60%;
+    width:65%;
     display:flex;
     justify-content:center;
     align-items:center;
@@ -233,6 +237,9 @@ color: rgb(114, 117, 114);
 
 
 
+
+
+
 @media only screen and (max-width:1280px) {
     .textfield i{
         right: 155px;
@@ -247,6 +254,7 @@ color: rgb(114, 117, 114);
 .card-login{
 
     width:85%;
+   
 
 }
     .textfield i{
@@ -303,7 +311,7 @@ color: rgb(114, 117, 114);
 
 .card-login{
 
-    width:70%;
+    width:85%;
     
 }
 .textfield i{
