--- a/gema-main/assets/css/principal.css
+++ b/gema-main/assets/css/principal.css
@@ -1,29 +1,33 @@
-.modal{
-
-    width: 300px;
-}
-
-
-.modal-content{
+#exampleModal .modal-content{ /*aqui modifica a caixa inteira do menu que aparece do lado no site */
 
     width: 300px;
     background-color: #9abf99;
 
 }
 
-.list-group-item{
+.list-group-item{ /*aqui modifica a cor da caixa em que as palavras do menu (Painel,Eventos no Calendário,Processos,Notificações e Conta) estão*/
 
      background-color: #9abf99;
      
 }
+a:link{
+    text-decoration: none;
+}
 
-.list-group-item:hover{
+.list-group-item:hover{ /*aqui meche na cor que fica quando passa o mouse na caixa do texto dentro do menu (Painel,Eventos no Calendário,Processos,Notificações e Conta)*/
 
 background-color: #67A665;
+    text-decoration: none;
 
 }
 
-.imagem {
+.list-group-item span{ /*aqui meche no texto dentro do menu (Painel,Eventos no Calendário,Processos,Notificações e Conta)*/
+
+margin-left:15px;
+
+}
+
+.imagem { /*modifica as caracteristicas da imagem que está no inicio do menu*/
 
 width:100px ;
 height:100px ;
@@ -33,7 +37,7 @@ margin-left: 75px;
 }
 
 
-#sidebar_btn {
+#sidebar_btn { /*aqui modifica as caracteristicas do icone de menu que temos na navbar*/
 
 
 left:1px;
@@ -47,17 +51,223 @@ bottom: 8px;
 
 }
 
-.sair_btn {
+.sair_btn { /*aqui modifica as caracteristicas do botão sair que temos no menu lateral do site*/
 
 text-decoration: none;
 color: #fff;
 
 }
 
-.sair_btn:hover{
+.sair_btn:hover{/*aqui modifica as caracteristicas de quando o mouse passa em cima do botão sair*/
 
 
 color: #fff;
+
+}
+#logo{ /*Imagem Gema presente no menu*/
+
+    width:45px;
+    margin-left:15px;
+
+   
+}
+
+
+.navbar-brand1 /*Título Gema no Menu*/
+
+{
+
+margin-left: 60px;
+color: #b2d3b1;
+text-decoration: none;
+position: fixed;
+font-size: 18px;
+
+
+
+}
+
+a:hover {
+
+    color: #fff;
+}
+
+.navbar-brand span{ /*Título Gerenciador de Eventos Mediados Acadêmicos no Menu*/
+
+    color: #b2d3b1;
+
+
+}
+
+
+
+h3{
+
+    margin-top:8px;
+    margin-left:03px;
+
+}
+
+/*Processos*/
+
+.card1 { /*Aqui modifica as informações da div em que estão o pendente, aprovado, recusado*/
+
+    height: 175px;
+    margin-top: 23px;
+    border: solid 1px #fff;
+    border-radius:.25rem ;
+}
+
+
+
+.card2{ /**/
+    
+    height: 60px;
+    width:100%;
+    margin-top: -3px;
+    background-color: #a8cea8;
+    
+}
+
+.card3 { /**/
+    
+    height: 60px;
+    width:100%;
+    background-color: #a8cea8;
+    margin-top: 20px;
+    
+}
+.card4 { /**/
+    
+    height: 60px;
+    width:100%;
+    background-color:#a8cea8;
+    margin-top: 20px;
+    
+}
+
+#apro {
+
+    background-color: rgb(43, 255, 0);
+    color: rgb(124, 141, 219);
+    margin-left: 50%;
+
+}
+
+#card2 {
+
+    background-color: aqua;
+    color: rgb(124, 141, 219);
+    margin-left: 38%;
+   
+    
+}
+
+#pend{
+
+    background-color: rgb(43, 255, 0);
+    color: rgb(124, 141, 219);
+    margin-left: 48%;
+
+}
+
+#card3 {
+
+    background-color: aqua;
+    color: rgb(124, 141, 219);
+    margin-left: 38%;
+
+}
+
+#rec {
+
+    background-color: rgb(43, 255, 0);
+    color: rgb(124, 141, 219);
+    margin-left: 49%;
+}
+
+#card4 {
+
+    background-color: aqua;
+    color: rgb(124, 141, 219);
+    margin-left: 38%;
+
+}
+
+@media only screen and (max-width:1760px) { /*modifica as caracteristicas especificadas aqui quando a tela esta no maximo desse tamanho*/
+
+    
+
+    .navbar-brand span {
+   
+
+        display: none;
+            
+    
+    }
+      
+}
+
+
+
+@media only screen and (max-width:1330px) { /*modifica as caracteristicas especificadas aqui quando a tela esta no maximo desse tamanho*/
+
+  
+
+    .navbar-brand span {
+   
+
+        display: none;
+            
+    
+    }
+      
+}
+
+
+
+@media only screen and (max-width:950px) { /*modifica as caracteristicas especificadas aqui quando a tela esta no maximo desse tamanho*/
+   
+
+    .navbar-brand span {
+   
+
+        display: none;
+            
+    
+    }
+
+    
+    
+    
+  
+
+    
+}
+
+
+
+
+@media only screen and (max-width:600px) { /*modifica as caracteristicas especificadas aqui quando a tela esta no maximo desse tamanho*/
+
+
+   
+   
+    .navbar-brand span {
+   
+
+    display: none;
+        
+
+    }
+    .fc-toolbar h2 {
+    font-size: 1.5em;
+    }
+  
+
+    
+    
+    
 
 }
 
